Move RootLayout styles to its own file and add overflow-x: hidden for menu animation issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,12 +11,6 @@
   padding: 0;
 }
 
-.root-layout {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
 .main {
   flex-grow: 1;
   display: flex;
